# SAP

./: MASTER.xlsx  README.md  main.py  pyproject.toml  temp.py
assets/creds/: mapping_page_login_password_hash
assets/custom_components/footer/: element.html  script.js  style.css
assets/dummy_dfs/: empty_dfs.pkl
assets/mappings/: acquirer_n_device_model_to_item_no_n_item_desciption.json  bp_codes_n_names.json  column_validation_mapper copy.json  column_validation_mapper.json  columnwise_mapping copy.json  columnwise_mapping.json  columnwise_mapping_original.json  json_excel_sheet_mapper.json  mapping.py  region_to_spl_codes.json  sheetz_n_mappings.json  statenames_n_short_codes.json  status_columns.json
assets/mappings/backup/: acquirer_n_device_model_to_item_no_n_item_desciption.json  bp_codes_n_names.json  deactivation_date_column_mapping.json  region_to_spl_codes.json  sheet_names.json  statenames_n_short_codes.json
notes/: issues_on_mapping_cols_info.yaml  logic.yaml  satish  temp.yml
sap_upload_excel_creator/: __main__.py  config.py  functions.py  installation.py  paths.py
sap_upload_excel_creator/core/: functions.py  mappers.py  validate.py
sap_upload_excel_creator/ui/: __init__.py  utils.py
sap_upload_excel_creator/ui/pages/: home.py
