[tool.poetry]
name = "sap-upload-excel-creator"
version = "0.1.0"
description = "Automated creation of SAP upload format Excel file by aggregating source excel files.."
authors = ["asifpasha2743 <asif.pasha@razorpay.com>"]
readme = "README.md"
packages = [{include = "sap_upload_excel_creator"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0" # "^3.8"
numpy = "^1.25.0"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
pyxlsb = "^1.0.10"
xlsxwriter = "^3.0.6"
streamlit = "^1.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
